fix for login icon jump while loading

--- a/server/webapp/WEB-INF/rails/webpack/views/pages/login_page/login_page_widget.scss
+++ b/server/webapp/WEB-INF/rails/webpack/views/pages/login_page/login_page_widget.scss
@@ -173,7 +173,6 @@ $opacity: 0.2;
   justify-content: center;
   position:        relative;
 
-
 }
 
 .web-login-link {
@@ -185,11 +184,9 @@ $opacity: 0.2;
   width:         94px;
   height:        94px;
   box-sizing:    border-box;
-  transition:    all 0.4s ease-in-out;
 
   &:hover {
     box-shadow: 0 2px 4px $box-shadow-color;
-    transition: all 0.4s ease-in-out;
   }
 }
 
